# polyreaper

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
apps/bot/: Cargo.toml
apps/bot/src/: bot.rs  config.rs  decision_log.rs  execution.rs  fv.rs  lib.rs  live.rs  main.rs  market_state.rs  metrics.rs  position.rs  risk.rs  state_persist.rs  stats.rs  strategy.rs
apps/bot/src/feeds/: binance.rs  mod.rs  polymarket.rs
apps/bot/src/live/: client.rs  signing.rs
apps/bot/src/signals/: mod.rs  scoring.rs
apps/bot/tests/: integration.rs
apps/recorder/: Cargo.toml
apps/recorder/src/: health.rs  latency.rs  main.rs  meta.rs  sweep.rs
apps/replayer/: Cargo.toml
apps/replayer/src/: cli.rs  main.rs
apps/replayer/tests/: cli.rs
configs/: bot.toml  lag_oos_baseline.toml  recorder.toml
crates/binance_feed/: Cargo.toml
crates/binance_feed/src/: conn.rs  frame.rs  lib.rs  snapshot.rs
crates/chainlink_feed/: Cargo.toml
crates/chainlink_feed/src/: conn.rs  frame.rs  lib.rs
crates/coinbase_feed/: Cargo.toml
crates/coinbase_feed/src/: conn.rs  frame.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/market_registry/: Cargo.toml
crates/market_registry/src/: gamma.rs  lib.rs
crates/polymarket_feed/: Cargo.toml
crates/polymarket_feed/src/: conn.rs  frame.rs  lib.rs  snapshot.rs
crates/replayer/: Cargo.toml
crates/replayer/src/: discovery.rs  error.rs  filter.rs  integrity.rs  lib.rs  merge.rs  pacer.rs  parquet.rs  reader.rs
crates/replayer/src/book/: binance.rs  mod.rs  polymarket.rs
crates/replayer/src/decode/: binance.rs  chainlink.rs  coinbase.rs  mod.rs  polymarket.rs
crates/replayer/tests/: decode_real_data.rs  round_trip.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
docs/: ANALYSIS_SCRIPTS_INVENTORY.md  BOT_ARCHITECTURE_AND_BUILD_PLAN.md  CLAUDE_UNATTENDED_WORK_RULES.md  NEXT_SESSION.md  PROJECT_WORKFLOW_INDEX.md  PROMOTION_GATES.md  RECORDER_RUNBOOK.md  REPRODUCIBILITY_AND_EXPERIMENT_STANDARD.md  SETUP_VPS.md  SETUP_WINDOWS.md  TASK_BOARD.md  TECH_DEBT.md  UNSOLVED_PROBLEMS_AND_RISKS.md  decisions.md  polymarket_census.txt  polymarket_inner_keys.txt
docs/research/integrity/: 2026-05-10-train-integrity.md
manifests/: sessions.toml
scripts/: analyze_strike_gap.py  deploy.sh  disk_guard.service  disk_guard.sh  disk_guard.timer  momentum_test.py  sigma_sweep.py  vps_polymarket_census.sh  vps_polymarket_inner_keys.sh  z_score_regression.py
