[workspace]
resolver = "2"
members = [
    "apps/bot",
    "apps/recorder",
    "apps/replayer",
    "crates/common",
    "crates/config",
    "crates/telemetry",
    "crates/storage",
    "crates/market_registry",
    "crates/binance_feed",
    "crates/polymarket_feed",
    "crates/coinbase_feed",
    "crates/chainlink_feed",
    "crates/replayer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "UNLICENSED"
publish = false

# Internal crates referenced via workspace deps so paths stay in one place.
# External deps are pinned here so every crate shares the same version.
[workspace.dependencies]
common           = { path = "crates/common" }
config           = { path = "crates/config" }
telemetry        = { path = "crates/telemetry" }
storage          = { path = "crates/storage" }
market_registry  = { path = "crates/market_registry" }
binance_feed     = { path = "crates/binance_feed" }
polymarket_feed  = { path = "crates/polymarket_feed" }
coinbase_feed    = { path = "crates/coinbase_feed" }
chainlink_feed   = { path = "crates/chainlink_feed" }
replayer         = { path = "crates/replayer" }

serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
tokio-tungstenite  = { version = "0.24", features = ["native-tls"] }
futures-util       = { version = "0.3", default-features = false, features = ["std", "sink"] }
reqwest            = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
regex              = "1"
rust_decimal       = { version = "1", features = ["serde", "serde-with-str"] }
arrow              = { version = "53", default-features = false }
parquet            = { version = "53", default-features = false, features = ["arrow", "snap"] }
flate2             = { version = "1", default-features = false, features = ["rust_backend"] }

# Live-trading crypto (Polymarket CLOB v2). EIP-712 + HMAC-SHA256.
# Kept minimal — full `alloy` stack would balloon the dep tree.
k256               = { version = "0.13", features = ["ecdsa"] }
sha3               = "0.10"
sha2               = "0.10"
hmac               = "0.12"
base64             = "0.22"
hex                = "0.4"
rand               = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
