[package]
name = "bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "bot"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[lib]
name = "bot"
path = "src/lib.rs"

[dependencies]
common          = { workspace = true }
market_registry = { workspace = true }
config          = { workspace = true }
# market_registry pulls serde in transitively but its types are surfaced
# through this crate's public API, so we depend on serde directly too.

serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio              = { workspace = true }
tokio-tungstenite  = { workspace = true }
futures-util       = { workspace = true }
reqwest            = { workspace = true }

[dev-dependencies]
