[package]
name = "recorder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "recorder"
path = "src/main.rs"

[[bin]]
name = "recorder_verify"
path = "src/bin/verify.rs"

[dependencies]
common          = { workspace = true }
config          = { workspace = true }
telemetry       = { workspace = true }
storage         = { workspace = true }
market_registry = { workspace = true }
binance_feed    = { workspace = true }
polymarket_feed = { workspace = true }
coinbase_feed   = { workspace = true }
chainlink_feed  = { workspace = true }

tracing         = { workspace = true }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
