[package]
name = "binance_feed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
common            = { workspace = true }
config            = { workspace = true }
storage           = { workspace = true }
telemetry         = { workspace = true }
tracing           = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }
