[package]
name = "market_registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
config     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
reqwest    = { workspace = true }
regex      = { workspace = true }
tokio      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
