[package]
name = "replayer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
parquet = ["dep:arrow", "dep:parquet"]

[dependencies]
common       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
rust_decimal = { workspace = true }
arrow        = { workspace = true, optional = true }
parquet      = { workspace = true, optional = true }

[dev-dependencies]
storage = { workspace = true }
config  = { workspace = true }
