[package]
name = "storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
common     = { workspace = true }
config     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

# No dev-deps: a tiny inline temp-dir helper lives in the tests module to
# avoid pulling tempfile/getrandom/windows-sys into the test build.

